упрощена реализация пагинации и сортировки